--- a/Code/homepage_2/css/helper.css
+++ b/Code/homepage_2/css/helper.css
@@ -54,7 +54,7 @@ TABLE OF CONTENTS
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   -webkit-overflow-scrolling: touch;
 }
 body {
@@ -64,7 +64,7 @@ svg {
   max-height: 100%;
 }
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Biome", sans-serif;
   color: #888888;
   line-height: 1.5;
   font-size: 14px;
@@ -389,32 +389,32 @@ section.no-border,
 .shadow-large,
 .hov-shadow-large:hover {
   -webkit-box-shadow: 0 3px 30px 0 rgba(0, 0, 0, 0.15);
-          box-shadow: 0 3px 30px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: 0 3px 30px 0 rgba(0, 0, 0, 0.15);
 }
 .shadow-medium,
 .hov-shadow-medium:hover {
   -webkit-box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.15);
-          box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.15);
 }
 .shadow-small,
 .hov-shadow-small:hover {
   -webkit-box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.15);
-          box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.15);
 }
 .shadow-mini,
 .hov-shadow-mini:hover {
   -webkit-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.15);
-          box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.15);
 }
 .shadow-tiny,
 .hov-shadow-tiny:hover {
   -webkit-box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.15);
-          box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.15);
 }
 .shadow-micro,
 .hov-shadow-micro:hover {
   -webkit-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.15);
-          box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.15);
 }
 /* Clearing
 =========================*/
@@ -422,7 +422,7 @@ section.no-border,
 .nav-header:after,
 .nav-links:before,
 .nav-links:after {
-  content: '';
+  content: "";
   display: table;
   clear: both;
 }
@@ -446,11 +446,11 @@ section.no-border,
   display: -ms-inline-flexbox;
   display: inline-flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 /* Table
 ********************************************/
@@ -541,7 +541,7 @@ section.no-border,
 .form-control {
   border-radius: 3px;
   -webkit-box-shadow: none;
-          box-shadow: none;
+  box-shadow: none;
   background-color: transparent;
   vertical-align: middle;
   border: 1px solid rgba(0, 0, 0, 0.15);
@@ -555,7 +555,7 @@ section.no-border,
 .form-control:focus {
   border-color: rgba(0, 0, 0, 0.5);
   -webkit-box-shadow: none;
-          box-shadow: none;
+  box-shadow: none;
 }
 /* Light form control */
 .form-control-light {
@@ -735,13 +735,13 @@ Subscribe blocks 2
 /* Buttons
 =========================*/
 .btn {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Biome", sans-serif;
   border-radius: 3px;
   padding: 14px 20px;
   font-size: 16px;
   min-height: 45px;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   border: 1px solid transparent;
   background-color: transparent;
   line-height: 1;
@@ -753,7 +753,7 @@ Subscribe blocks 2
 .btn.active,
 .btn:focus {
   -webkit-box-shadow: none;
-          box-shadow: none;
+  box-shadow: none;
 }
 /* Button utilities
 =========================*/
@@ -872,7 +872,7 @@ Subscribe blocks 2
   width: 35px;
   text-align: center;
   -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 .appstore-btn small {
   display: block;
@@ -1396,7 +1396,7 @@ h4,
 h5,
 h6,
 .tb-list {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Biome", sans-serif;
 }
 h1,
 .hd-1 {
@@ -1824,13 +1824,13 @@ h6.bdr-b {
 /* Font family
 =========================*/
 .f-1 {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Biome", sans-serif;
 }
 .f-2 {
   font-family: "Montserrat", sans-serif;
 }
 .f-3 {
-  font-family: 'Rancho', cursive;
+  font-family: "Rancho", cursive;
 }
 [class*="link-"]:hover {
   text-decoration: underline;
@@ -1958,7 +1958,7 @@ h6.bdr-b {
 .cm-item,
 .cm > .cm-item {
   -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   position: absolute;
   top: 50%;
   left: 50%;
@@ -1966,12 +1966,12 @@ h6.bdr-b {
 .vm-item,
 .vm > .vm-item {
   -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
   top: 50%;
 }
 .c-item {
   -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  transform: translateX(-50%);
   left: 50%;
 }
 .align-l {
@@ -2010,43 +2010,43 @@ h6.bdr-b {
 .flex-tl {
   /* flex-start | flex-end | center | space-between | space-around */
   -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
   /* flex-start | flex-end | center | baseline | stretch */
   -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
 }
 .flex-tc {
   /* flex-start | flex-end | center | space-between | space-around */
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   /* flex-start | flex-end | center | baseline | stretch */
   -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
 }
 .flex-tr {
   /* flex-start | flex-end | center | space-between | space-around */
   -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
   /* flex-start | flex-end | center | baseline | stretch */
   -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
 }
 .iconwrp,
 .flex-cl {
   /* flex-start | flex-end | center | space-between | space-around */
   -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
   /* flex-start | flex-end | center | baseline | stretch */
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 .info-obj.align-c .iconwrp,
 .info-obj.align-r .sq.iconwrp,
@@ -2058,67 +2058,67 @@ h6.bdr-b {
 .flex-cc {
   /* flex-start | flex-end | center | space-between | space-around */
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   /* flex-start | flex-end | center | baseline | stretch */
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 .info-obj.align-r .iconwrp,
 .flex-cr {
   /* flex-start | flex-end | center | space-between | space-around */
   -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
   /* flex-start | flex-end | center | baseline | stretch */
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 .flex-bc {
   /* flex-start | flex-end | center | space-between | space-around */
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   /* flex-start | flex-end | center | baseline | stretch */
   -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  -ms-flex-align: end;
+  align-items: flex-end;
 }
 .flex-bl {
   /* flex-start | flex-end | center | space-between | space-around */
   -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
   /* flex-start | flex-end | center | baseline | stretch */
   -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  -ms-flex-align: end;
+  align-items: flex-end;
 }
 .flex-br {
   /* flex-start | flex-end | center | space-between | space-around */
   -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
   /* flex-start | flex-end | center | baseline | stretch */
   -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  -ms-flex-align: end;
+  align-items: flex-end;
 }
 .flex-item-bc {
   -ms-flex-item-align: end;
-      align-self: flex-end;
+  align-self: flex-end;
 }
 .flex-item-cl {
   -ms-flex-item-align: start;
-      align-self: flex-start;
+  align-self: flex-start;
 }
 .flex-eqh {
   /* flex-start | flex-end | center | baseline | stretch */
   -webkit-box-align: stretch;
-      -ms-flex-align: stretch;
-          align-items: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch;
 }
 /* Padding
 =========================*/
@@ -4097,25 +4097,25 @@ form.frm-gt200 .form-control {
 /* Width x Height - other
 =========================*/
 .w-auto {
-  width: auto!important;
+  width: auto !important;
 }
 .w-inherit {
-  width: inherit!important;
+  width: inherit !important;
 }
 .w-initial {
-  width: initial!important;
+  width: initial !important;
 }
 .w-max-auto {
-  max-width: none!important;
+  max-width: none !important;
 }
 .h-auto {
-  height: auto!important;
+  height: auto !important;
 }
 .h-inherit {
-  height: inherit!important;
+  height: inherit !important;
 }
 .h-initial {
-  height: initial!important;
+  height: initial !important;
 }
 /* Other utilities
 =========================*/
@@ -4292,129 +4292,129 @@ a,
   0% {
     opacity: 0;
     -webkit-transform: translateY(40px);
-            transform: translateY(40px);
+    transform: translateY(40px);
   }
   100% {
     opacity: 1;
     -webkit-transform: translateY(0);
-            transform: translateY(0);
+    transform: translateY(0);
   }
 }
 @keyframes rg_fadeup {
   0% {
     opacity: 0;
     -webkit-transform: translateY(40px);
-            transform: translateY(40px);
+    transform: translateY(40px);
   }
   100% {
     opacity: 1;
     -webkit-transform: translateY(0);
-            transform: translateY(0);
+    transform: translateY(0);
   }
 }
 @-webkit-keyframes rg_fadedown {
   0% {
     opacity: 1;
     -webkit-transform: translateY(0);
-            transform: translateY(0);
+    transform: translateY(0);
   }
   100% {
     opacity: 0;
     -webkit-transform: translateY(40px);
-            transform: translateY(40px);
+    transform: translateY(40px);
   }
 }
 @keyframes rg_fadedown {
   0% {
     opacity: 1;
     -webkit-transform: translateY(0);
-            transform: translateY(0);
+    transform: translateY(0);
   }
   100% {
     opacity: 0;
     -webkit-transform: translateY(40px);
-            transform: translateY(40px);
+    transform: translateY(40px);
   }
 }
 @-webkit-keyframes rg_fadeindown {
   0% {
     opacity: 0;
     -webkit-transform: translateY(-40px);
-            transform: translateY(-40px);
+    transform: translateY(-40px);
   }
   100% {
     opacity: 1;
     -webkit-transform: translateY(0);
-            transform: translateY(0);
+    transform: translateY(0);
   }
 }
 @keyframes rg_fadeindown {
   0% {
     opacity: 0;
     -webkit-transform: translateY(-40px);
-            transform: translateY(-40px);
+    transform: translateY(-40px);
   }
   100% {
     opacity: 1;
     -webkit-transform: translateY(0);
-            transform: translateY(0);
+    transform: translateY(0);
   }
 }
 @-webkit-keyframes rg_fadeleft {
   0% {
     opacity: 0;
     -webkit-transform: translateX(40px);
-            transform: translateX(40px);
+    transform: translateX(40px);
   }
   100% {
     opacity: 1;
     -webkit-transform: translateX(0);
-            transform: translateX(0);
+    transform: translateX(0);
   }
 }
 @keyframes rg_fadeleft {
   0% {
     opacity: 0;
     -webkit-transform: translateX(40px);
-            transform: translateX(40px);
+    transform: translateX(40px);
   }
   100% {
     opacity: 1;
     -webkit-transform: translateX(0);
-            transform: translateX(0);
+    transform: translateX(0);
   }
 }
 .rg_fadeup {
   -webkit-animation-name: rg_fadeup;
-          animation-name: rg_fadeup;
+  animation-name: rg_fadeup;
   -webkit-animation-duration: 0.6s;
-          animation-duration: 0.6s;
+  animation-duration: 0.6s;
   -webkit-animation-fill-mode: both;
-          animation-fill-mode: both;
+  animation-fill-mode: both;
 }
 .rg_fadedown {
   -webkit-animation-name: rg_fadedown;
-          animation-name: rg_fadedown;
+  animation-name: rg_fadedown;
   -webkit-animation-duration: 0.6s;
-          animation-duration: 0.6s;
+  animation-duration: 0.6s;
   -webkit-animation-fill-mode: both;
-          animation-fill-mode: both;
+  animation-fill-mode: both;
 }
 .rg_fadeindown {
   -webkit-animation-name: rg_fadeindown;
-          animation-name: rg_fadeindown;
+  animation-name: rg_fadeindown;
   -webkit-animation-duration: 0.6s;
-          animation-duration: 0.6s;
+  animation-duration: 0.6s;
   -webkit-animation-fill-mode: both;
-          animation-fill-mode: both;
+  animation-fill-mode: both;
 }
 .rg_fadeleft {
   -webkit-animation-name: rg_fadeleft;
-          animation-name: rg_fadeleft;
+  animation-name: rg_fadeleft;
   -webkit-animation-duration: 0.6s;
-          animation-duration: 0.6s;
+  animation-duration: 0.6s;
   -webkit-animation-fill-mode: both;
-          animation-fill-mode: both;
+  animation-fill-mode: both;
 }
 .s01 {
   -webkit-animation-duration: 01s;
@@ -4592,7 +4592,7 @@ a,
 	********************************************/
   .el-parallax {
     -webkit-transform: none !important;
-            transform: none !important;
+    transform: none !important;
   }
   /* Font sizes
 	=========================*/
@@ -5045,7 +5045,7 @@ a,
     -ms-flex-direction: column;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-            flex-direction: column;
+    flex-direction: column;
   }
   .row-bdr > [class*="flex-col-"] {
     border-right: none;
@@ -5183,7 +5183,7 @@ a,
   }
   .el-parallax {
     -webkit-transform: none !important;
-            transform: none !important;
+    transform: none !important;
   }
   /* Font sizes
 	=========================*/
@@ -5625,7 +5625,7 @@ a,
   }
   [data-nc-md*="parallax-reset"] {
     -webkit-transform: none !important;
-            transform: none !important;
+    transform: none !important;
     display: block !important;
     top: 0 !important;
     margin: 0 !important;
@@ -5711,7 +5711,7 @@ body > .spinner-wrp {
   width: 40px;
   height: 40px;
   -webkit-animation: spin 2s linear infinite;
-          animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -5729,20 +5729,20 @@ body > .spinner-wrp {
 @-webkit-keyframes spin {
   0% {
     -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   100% {
     -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
 @keyframes spin {
   0% {
     -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   100% {
     -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
