--- a/Code/homepage_1/assets/css/style.css
+++ b/Code/homepage_1/assets/css/style.css
@@ -181,20 +181,22 @@ body {
   background-size: cover !important;
   background-position: center center !important;
 }
-.black-btn {
-  font-family: Montserrat, sans-serif;
-  background-color: #000000;
-  padding: 8px 25px;
+.blue-btn {
+  background-color: #1f115d;
+  padding: 10px 25px;
   border-radius: 0;
   color: #ffffff;
-  font-size: 14px;
-  border: solid 1px #000000;
+  font-size: 16px;
+  border: solid 1px #1f115d;
   transition: 0.8s ease;
   text-decoration: none;
+  border-radius: 100px;
+  cursor: pointer;
 }
-.black-btn:hover {
-  background-color: transparent;
-  color: #000000;
+.blue-btn:hover {
+  background-color: #fff;
+  border-color: #fff;
+  color: #1f115d;
 }
 
 /* ===================================
@@ -599,6 +601,7 @@ body {
 }
 .home-banner-wrap {
   text-align: center;
+  color: #fff;
 }
 .home-banner img {
   max-width: 200px;
@@ -607,6 +610,11 @@ body {
 .home-banner h1 {
   color: white;
   text-align: center;
+  margin-bottom: 20px;
+}
+.home-banner-wrap p {
+  margin-bottom: 30px;
+  font-size: 20px;
 }
 .map-content-area span {
   display: block;
@@ -1223,4 +1231,15 @@ body {
   .services-sec .our-services > div:last-child .service-card {
     margin-bottom: 0;
   }
+}
+
+/***********************************/
+/**************Custom*************/
+/***********************************/
+.logo {
+  z-index: 1;
+  max-width: 150px;
+  position: absolute;
+  right: 50px;
+  top: 40px;
 }
