--- a/Code/homepage_1/assets/css/style.css
+++ b/Code/homepage_1/assets/css/style.css
@@ -1,16 +1,4 @@
 /* ===================================
-    About
-====================================== */
-/*
-    Theme Name: MegaOne
-    Theme URI:
-    Author: Themes Industry
-    Author URI:
-    Description: One Page Parallax Template
-    Tags: one page, multipurpose, parallax, creative, html5
-
- */
-/* ===================================
     Table of Content
 ====================================== */
 /*  - Fonts
@@ -22,7 +10,7 @@
     Google font
 ====================================== */
 @import url("https://fonts.googleapis.com/css?family=Montserrat:300,500,700&display=swap");
-@import url(//db.onlinewebfonts.com/c/1c6b6cddab6609324d9016562358e0cd?family=Biome);
+@import url("https://db.onlinewebfonts.com/c/1c6b6cddab6609324d9016562358e0cd?family=Biome"); /* @TODO : Local font */
 
 body {
     font-family: "Biome", sans-serif;
@@ -621,10 +609,10 @@ body {
 }
 
 .bg-primary {
-/*background: rgb(9,9,48);
-background: linear-gradient(225deg, rgba(9,9,48,1) 0%, rgba(33,33,112,1) 75%, rgba(33,33,112,1) 100%);*/
-background: rgb(7,7,51);
-background: linear-gradient(225deg, rgba(7,7,51,1) 0%, rgba(53,53,133,1) 75%, rgba(53,53,133,1) 100%);
+    /*background: rgb(9,9,48);
+    background: linear-gradient(225deg, rgba(9,9,48,1) 0%, rgba(33,33,112,1) 75%, rgba(33,33,112,1) 100%);*/
+    background: rgb(7, 7, 51);
+    background: linear-gradient(225deg, rgba(7, 7, 51, 1) 0%, rgba(53, 53, 133, 1) 75%, rgba(53, 53, 133, 1) 100%);
 }
 
 .bg-image-holder img {
