--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -391,7 +391,7 @@ body {
 /*side open btn*/
 
 .side-menu .inner-wrapper {
-    padding: 3.5rem 3rem 3.5rem 3rem;
+    padding: 3.5rem 3rem 0rem 3rem;  /* bring the menu a bit down (0-bottom padding) */
     height: 100%;
     position: relative;
     overflow-y: auto;
@@ -1409,7 +1409,6 @@ body {
     position: fixed;
     bottom: 5%;
     left: 5%;
-    padding-left: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -1421,24 +1420,36 @@ body {
 
 .arma-news {
     margin-bottom: 0;
-    width: 45%;
+    width: 42%;
 }
 
 .arma-news li a {
     color: white;
-    font-size: 16px;
+    font-size: 1rem;
     text-decoration: none;
-    font-weight: 600;
+    font-weight: 500;
     line-height: 1;
+    opacity: 0.7;
+    padding: 5px 0;
+}
+
+.arma-news li a:hover {
+    opacity: 1;
 }
 
 .news-heading {
-    font-size: 20px;
-    font-weight: bold;
-    color: #dd4d3a;
-    padding-right: 10px;
+    font-size: 1rem;
+    font-weight: 500;
+    color: #fff;
+    background-color: #1f115d;
+    border-radius: 3px;
+    text-align: center;
+    padding: 10px;
     text-transform: uppercase;
     letter-spacing: 0;
     line-height: 1;
-    margin: 0;
+    margin-right: 15px;
+}
+.footer-news:hover .news-heading {
+    background-color: #dd4d3a;
 }
