--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -1448,7 +1448,7 @@ body {
     text-transform: uppercase;
     letter-spacing: 0;
     line-height: 1;
-    margin-right: 15px;
+    margin: 0 15px 0 0;
 }
 .footer-news:hover .news-heading {
     background-color: #dd4d3a;
