--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -1234,6 +1234,67 @@ body {
     font-weight: 500;
 }
 
+
+/***********************************/
+/**************Custom*************/
+/***********************************/
+.logo {
+    z-index: 1;
+    max-width: 150px;
+    position: absolute;
+    right: 50px;
+    top: 40px;
+}
+
+.footer-news {
+    position: fixed;
+    bottom: 5%;
+    left: 5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.arma-news .slick-arrow {
+    display: none !important;
+}
+
+.arma-news {
+    margin-bottom: 0;
+    width: 42%;
+}
+
+.arma-news li a {
+    color: white;
+    font-size: 1rem;
+    text-decoration: none;
+    font-weight: 500;
+    line-height: 1;
+    opacity: 0.7;
+    padding: 5px 0;
+}
+
+.arma-news li a:hover {
+    opacity: 1;
+}
+
+.news-heading {
+    font-size: 1rem;
+    font-weight: 500;
+    color: #fff;
+    background-color: #1f115d;
+    border-radius: 3px;
+    text-align: center;
+    padding: 10px;
+    text-transform: uppercase;
+    letter-spacing: 0;
+    line-height: 1;
+    margin: 0 15px 0 0;
+}
+.footer-news:hover .news-heading {
+    background-color: #dd4d3a;
+}
+
 /* ===================================
     Media Queries
    ====================================== */
@@ -1320,6 +1381,13 @@ body {
         padding-left: 18px;
         padding-right: 18px;
     }
+
+    /***********************************/
+    /**************Custom*************/
+    /***********************************/
+    .arma-news {
+        width: 85%;
+    }
 }
 
 @media screen and (max-width: 767px) {
@@ -1392,64 +1460,14 @@ body {
     .services-sec .our-services > div:last-child .service-card {
         margin-bottom: 0;
     }
-}
 
-/***********************************/
-/**************Custom*************/
-/***********************************/
-.logo {
-    z-index: 1;
-    max-width: 150px;
-    position: absolute;
-    right: 50px;
-    top: 40px;
-}
-
-.footer-news {
-    position: fixed;
-    bottom: 5%;
-    left: 5%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.arma-news .slick-arrow {
-    display: none !important;
-}
-
-.arma-news {
-    margin-bottom: 0;
-    width: 42%;
-}
-
-.arma-news li a {
-    color: white;
-    font-size: 1rem;
-    text-decoration: none;
-    font-weight: 500;
-    line-height: 1;
-    opacity: 0.7;
-    padding: 5px 0;
-}
-
-.arma-news li a:hover {
-    opacity: 1;
-}
-
-.news-heading {
-    font-size: 1rem;
-    font-weight: 500;
-    color: #fff;
-    background-color: #1f115d;
-    border-radius: 3px;
-    text-align: center;
-    padding: 10px;
-    text-transform: uppercase;
-    letter-spacing: 0;
-    line-height: 1;
-    margin: 0 15px 0 0;
-}
-.footer-news:hover .news-heading {
-    background-color: #dd4d3a;
+    /***********************************/
+    /**************Custom*************/
+    /***********************************/
+    .logo {
+        display: none;
+    }
+    .footer-news {
+        display: none;
+    }
 }
