--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -205,6 +205,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    padding: 30px 0;
 }
 
 .content-area {
@@ -282,6 +283,10 @@ body {
 .toggle-btn:hover span:first-child,
 .toggle-btn:hover span:last-child {
     width: 50%;
+}
+
+.navbar-toggle {
+    padding: 20px;
 }
 
 /* ===================================
