--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -13,7 +13,7 @@
 
 body {
     font-family: "Montserrat", "Source Sans Pro", sans-serif;
-    overflow-y: hidden;
+    overflow: hidden auto;
 }
 
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
@@ -605,7 +605,7 @@ body {
 [10. Overlays]
 */
 .overlay {
-    position: absolute;
+    position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
@@ -617,9 +617,10 @@ body {
 }
 
 .overlay-inner {
+    background: rgb(7, 7, 51);
     background-repeat: no-repeat;
     background-size: cover;
-    position: absolute;
+    position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
@@ -1313,8 +1314,9 @@ body {
 
 .page {
     width: 100%;
-    height: 100vh;
     align-items: center;
+    padding-top: 15rem;
+    padding-bottom: 8rem;
 }
 
 .breadcrumb {
@@ -1344,8 +1346,10 @@ li.breadcrumb-item.active {
 }
 
 .content-wrapper {
+    background: rgba(255, 255, 255, .9);
     font-size: 16px;
-    color:#fff;
+    padding: 30px;
+    border-radius: 4px;
 }
 
 /* ===================================
