--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -626,9 +626,10 @@ body {
 }
 
 .bg-secondary {
-    opacity: 0.8;
-    background: rgb(7, 7, 51);
-    background: linear-gradient(225deg, rgba(7, 7, 51, 1) 0%, rgba(53, 53, 133, 1) 75%, rgba(53, 53, 133, 1) 100%);
+    opacity: .8;
+    background-color: transparent !important;
+    background: rgb(31,17,93) !important;
+    background: linear-gradient(124deg, rgba(31,17,93,1) 0%, rgba(0,0,0,0) 90%) !important;
 }
 
 /* ===================================
@@ -1461,6 +1462,85 @@ li.breadcrumb-item.active {
     font-size: 1rem;
 }
 
+.content-bloc .image-holder {
+    overflow: hidden;
+    position: relative;
+}
+
+.content-bloc .image-holder:hover img {
+    -webkit-transform: scale(1.1, 1.1);
+    -moz-transform: scale(1.1, 1.1);
+    -ms-transform: scale(1.1, 1.1);
+    -o-transform: scale(1.1, 1.1);
+    transform: scale(1.1, 1.1);
+}
+
+.content-bloc .image-holder img {
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+    position: relative;
+    width: 100%;
+}
+
+.content-bloc .image-holder:after {content: "";border: 1px solid rgba(255 , 255, 255, .5);width: 90%;height: 90%;position: absolute;left: 5%;top: 5%;opacity: 0;transition: all 0.3s ease;}
+
+.content-bloc .image-holder:hover:after {
+    opacity: 1;
+}
+
+.small-text-bloc {
+    background: #fff;
+    padding: 20px 0 20px 20px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.small-text-bloc .image {
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: 30%;
+}
+
+.small-text-bloc .text {
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: 70%;
+    padding: 0 20px;
+}
+
+.small-text-bloc .image img {
+    max-width: 130px;
+}
+
+.content-bloc {
+    margin-bottom: 30px;
+}
+
+.small-text-bloc .text h4 {
+    font-size: 18px;
+    text-transform: uppercase;
+    letter-spacing: 0;
+}
+
+/*Animate css transition delay*/
+.wow__delay-1 {
+    animation-delay: 400ms;
+}
+.wow__delay-2 {
+    animation-delay: 600ms;
+}
+.wow__delay-3 {
+    animation-delay: 800ms;
+}
+.wow__delay-4 {
+    animation-delay: 1s;
+}
+.wow__delay-5 {
+    animation-delay: 1200ms;
+}
 /* ===================================
     Media Queries
    ====================================== */
