--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -1465,6 +1465,8 @@ li.breadcrumb-item.active {
 .content-bloc .image-holder {
     overflow: hidden;
     position: relative;
+    border-radius: 10px;
+    height: 100%;
 }
 
 .content-bloc .image-holder:hover img {
@@ -1481,9 +1483,10 @@ li.breadcrumb-item.active {
     transition: all 0.3s ease;
     position: relative;
     width: 100%;
+    height: 100%;
 }
 
-.content-bloc .image-holder:after {content: "";border: 1px solid rgba(255 , 255, 255, .5);width: 90%;height: 90%;position: absolute;left: 5%;top: 5%;opacity: 0;transition: all 0.3s ease;}
+.content-bloc .image-holder:after {content: "";border: 1px solid rgba(255 , 255, 255, .5);width: 95%;height: 95%;position: absolute;left: 0;top: 0;right: 0;bottom: 0;margin: auto;opacity: 0;border-radius: 10px;transition: all 0.3s ease;}
 
 .content-bloc .image-holder:hover:after {
     opacity: 1;
@@ -1491,8 +1494,8 @@ li.breadcrumb-item.active {
 
 .small-text-bloc {
     background: #fff;
-    padding: 20px 0 20px 20px;
-    border-radius: 5px;
+    padding: 20px;
+    border-radius: 10px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -1501,18 +1504,22 @@ li.breadcrumb-item.active {
 .small-text-bloc .image {
     flex-grow: 0;
     flex-shrink: 0;
-    flex-basis: 30%;
+    flex-basis: 25%;
 }
 
 .small-text-bloc .text {
     flex-grow: 0;
     flex-shrink: 0;
     flex-basis: 70%;
-    padding: 0 20px;
 }
 
-.small-text-bloc .image img {
-    max-width: 130px;
+.small-text-bloc .text p {
+    font-size: 1rem;
+    font-weight: 300;
+}
+
+.small-text-bloc + .small-text-bloc {
+    margin-top: 30px;
 }
 
 .content-bloc {
@@ -1520,7 +1527,7 @@ li.breadcrumb-item.active {
 }
 
 .small-text-bloc .text h4 {
-    font-size: 18px;
+    font-size: 20px;
     text-transform: uppercase;
     letter-spacing: 0;
 }
