--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -1485,27 +1485,19 @@ li.breadcrumb-item.active {
 }
 
 .content-bloc .image-holder {
-    overflow: hidden;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     position: relative;
     border-radius: 10px;
-    max-height: 382px;
-}
-
-.content-bloc .image-holder:hover img {
-    -webkit-transform: scale(1.1, 1.1);
-    -moz-transform: scale(1.1, 1.1);
-    -ms-transform: scale(1.1, 1.1);
-    -o-transform: scale(1.1, 1.1);
-    transform: scale(1.1, 1.1);
-}
-
-.content-bloc .image-holder img {
+    height: 100%;
     -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
     transition: all 0.3s ease;
-    position: relative;
-    width: 100%;
-    height: 100%;
+}
+
+.content-bloc .image-holder:hover {
+    opacity: .8;
 }
 
 .content-bloc .image-holder:after {content: "";border: 1px solid rgba(255 , 255, 255, .5);width: 95%;height: 95%;position: absolute;left: 0;top: 0;right: 0;bottom: 0;margin: auto;opacity: 0;border-radius: 10px;transition: all 0.3s ease;}
@@ -1555,6 +1547,10 @@ li.breadcrumb-item.active {
     flex-basis: 25%;
 }
 
+.small-text-bloc .image.bigger {
+    flex-basis: 28%;
+}
+
 .small-text-bloc .text {
     flex-grow: 0;
     flex-shrink: 0;
@@ -1578,7 +1574,35 @@ li.breadcrumb-item.active {
     font-size: 20px;
     text-transform: uppercase;
     letter-spacing: 0;
+    position: relative;
 }
+
+.small-text-bloc.text-only {
+    display: block;
+    padding: 30px;
+}
+
+.small-text-bloc.text-only .text + .text {
+    margin-top: 45px;
+}
+
+.small-text-bloc.text-only hr {
+    border-top: 3px solid #dd4d3a;
+    width: 55px;
+    margin: 0 0 45px 0;
+    border-radius: 100px;
+}
+
+.small-text-bloc.text-only .text h4 {
+    margin-bottom: 17px;
+}
+
+.small-text-bloc.text-only .text p {
+    line-height: 24px;
+}
+
+.small-text-bloc .text h4 i {font-size: 30px;color: #dd4d3a;position: absolute;right: 0;top: -5px;}
+
 
 /* Arma Stats */
 .arma-stats {
@@ -1752,6 +1776,22 @@ li.breadcrumb-item.active {
         width: 85%;
     }
 }
+
+@media screen and (max-width: 992px) {
+    .content-bloc .image-holder {
+        background: none !important;
+    }
+    
+    .content-bloc .image-holder img {
+        width: 100%;
+        margin: 30px 0;
+    }
+
+    .content-bloc.reverse-mobile {
+        flex-direction: column-reverse;
+    }
+}
+
 
 @media screen and (max-width: 767px) {
     .side-nav {
